chore: first commit

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.example.reactnativerawbtbridge">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="ru.a402d.rawbtprinter.PERMISSION" />
 
     <application
       android:name=".MainApplication"
